--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 autopep8==1.4.4
 Click==7.0
+dnspython==1.16.0
 Flask==1.1.1
+Flask-PyMongo==2.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 pycodestyle==2.5.0
+pymongo==3.10.1
 Werkzeug==0.16.0
